--- a/index.html
+++ b/index.html
@@ -7,34 +7,49 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body class="bg-indigo-900 min-h-screen">
-    <form id="formOne" class="bg-white max-w-lg mx-auto mt-10 rounded p-5 space-y-4">
+    <form
+      id="formOne"
+      class="bg-white max-w-lg mx-auto mt-10 rounded p-5 space-y-4"
+    >
       <h1 class="font-semibold text-lg">Request a Courier Pickup!</h1>
       <div class="flex flex-col gap-4">
-        <div class="grid grid-cols-2 gap-5">
-          <input type="text" class="form-inputs" name="name" placeholder="Name" />
+        <div class="grid grid-cols-2 gap-x-5">
+          <input
+            type="text"
+            class="form-inputs"
+            name="name"
+            id="name"
+            placeholder="Name"
+          />
           <input
             type="number"
             name="phone-number"
             min="0"
+            id="phone-number"
             class="form-inputs"
             placeholder="Phone"
           />
         </div>
-        <input
-          type="datetime-local"
-          class="form-inputs"
-          name="pickup-date"
-          id="date"
-          placeholder="Date"
-        />
-        <textarea
-          placeholder="Enter your pickup address"
-          class="form-inputs"
-          id=""
-          name="address"
-          cols="10"
-          rows="5"
-        ></textarea>
+        <div>
+          <input
+            type="datetime-local"
+            class="form-inputs"
+            id="pickup-date"
+            name="pickup-date"
+            id="date"
+            placeholder="Date"
+          />
+        </div>
+        <div>
+          <textarea
+            placeholder="Enter your pickup address"
+            class="form-inputs"
+            id="address"
+            name="address"
+            cols="10"
+            rows="5"
+          ></textarea>
+        </div>
       </div>
       <button
         type="submit"
@@ -71,5 +86,7 @@
         </tbody>
       </table>
     </div>
+
+    <script type="module" src="./asset/js/index.js"></script>
   </body>
 </html>
