Added Anbu Code

--- a/index.html
+++ b/index.html
@@ -3,91 +3,118 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Courier app to track your request" />
+    <meta
+      property="og:description"
+      content="Track all your courier request in one place. Just try it!"
+    />
+    <meta
+      property="og:image"
+      content="https://cdn.pixabay.com/photo/2016/02/21/20/24/courier-1214227_1280.jpg"
+    />
+
     <title>Courier Request Form</title>
-    <link rel="stylesheet" href="./index.css" />
+
+    <link rel="stylesheet" href="./asset/css/main.css" />
   </head>
-  <body class="bg-indigo-900 min-h-screen">
-    <form
-      id="formOne"
-      class="bg-white max-w-lg mx-auto mt-10 rounded p-5 space-y-4"
-    >
-      <h1 class="font-semibold text-lg">Request a Courier Pickup!</h1>
-      <div class="flex flex-col gap-4">
-        <div class="grid grid-cols-2 gap-x-5">
-          <input
-            type="text"
-            class="form-inputs"
-            name="name"
-            id="name"
-            placeholder="Name"
-          />
-          <input
-            type="number"
-            name="phone-number"
-            min="0"
-            id="phone-number"
-            class="form-inputs"
-            placeholder="Phone"
-          />
+  <body>
+    <div class="bg-indigo-900 min-h-screen p-10">
+      <div class="bg-white rounded p-5 max-w-xl mx-auto">
+        <h4 class="font-semibold text-xl">
+          Request a Courier Pickup!
+          <span class="bg-blue-100 px-3 py-1 rounded text-blue-600 text-xs"
+            >NEW</span
+          >
+        </h4>
+        <form id="courier-request-form" class="my-5 space-y-5" method="post">
+          <div class="grid grid-cols-2 gap-x-5">
+            <input
+              type="text"
+              id="name"
+              class="form-input"
+              placeholder="Name"
+              name="name"
+              required
+            />
+            <input
+              type="text"
+              id="mobile-no"
+              name="mobile"
+              class="form-input"
+              placeholder="Mobile Number"
+              required
+            />
+          </div>
+          <div>
+            <input
+              type="datetime-local"
+              name="pickup-date"
+              id="pickup-date"
+              class="form-input"
+              placeholder="Pickup Date"
+              required
+            />
+          </div>
+          <div>
+            <textarea
+              name="pickup-area"
+              id="pickup-area"
+              class="form-input"
+              cols="30"
+              rows="4"
+              placeholder="Enter your pickup address"
+              required
+            ></textarea>
+          </div>
+          <div>
+            <label for="agreements">
+              <input
+                type="checkbox"
+                name="agreements"
+                id="agreements"
+                required
+              />
+              I accept all terms and conditions.
+            </label>
+          </div>
+          <button
+            type="submit"
+            class="px-3 py-1 rounded bg-indigo-500 text-white w-full hover:bg-indigo-600"
+          >
+            Create Pickup
+          </button>
+        </form>
+      </div>
+
+      <div
+        class="bg-white rounded p-5 max-w-6xl mx-auto mt-10 hidden"
+        id="courierCard"
+      >
+        <div class="flex items-center space-x-2">
+          <h4 class="font-semibold text-xl">Courier Requests</h4>
+          <span
+            class="px-2 py-0.5 bg-green-500 rounded-full font-semibold text-white text-sm"
+            id="courierCount"
+          >
+            12
+          </span>
         </div>
-        <div>
-          <input
-            type="datetime-local"
-            class="form-inputs"
-            id="pickup-date"
-            name="pickup-date"
-            id="date"
-            placeholder="Date"
-          />
-        </div>
-        <div>
-          <textarea
-            placeholder="Enter your pickup address"
-            class="form-inputs"
-            id="address"
-            name="address"
-            cols="10"
-            rows="5"
-          ></textarea>
+        <div class="my-5 space-y-5">
+          <table class="table table-fixed border w-full text-center">
+            <tr>
+              <th class="px-2 py-1 border w-14">C.No</th>
+              <th class="px-2 py-1 border">Customer</th>
+              <th class="px-2 py-1 border">Mobile</th>
+              <th class="px-2 py-1 border">Pickup Date</th>
+              <th class="px-2 py-1 border">Address</th>
+              <th class="px-2 py-1 border w-20"></th>
+            </tr>
+            <tbody id="courierDataTable"></tbody>
+          </table>
         </div>
       </div>
-      <button
-        type="submit"
-        class="px-2 py-1 bg-indigo-500 hover:bg-indigo-600 text-white w-full rounded"
-      >
-        Create Pickup
-      </button>
-    </form>
-
-    <div class="bg-white max-w-2xl mx-auto mt-10 rounded p-5 space-y-4">
-      <h1 class="font-semibold text-lg">Courier Requests</h1>
-      <table class="w-full" id="courierTable">
-        <thead>
-          <tr>
-            <th class="border text-left px-5 py-1">Customer</th>
-            <th class="border text-left px-5 py-1">Pickup Date</th>
-            <th class="border text-left px-5 py-1">Address</th>
-            <th class="border text-left px-5 py-1"></th>
-          </tr>
-        </thead>
-        <tbody>
-          <!-- <tr>
-            <td class="border px-5 py-1">Kishor</td>
-            <td class="border px-5 py-1">28 Dec,2023</td>
-            <td class="border px-5 py-1">Bengaluru</td>
-            <td class="border px-5 py-1">
-              <button
-                class="px-2 py-1 bg-red-500 hover:bg-red-600 rounded text-white text-sm"
-              >
-                Delete
-              </button>
-            </td>
-          </tr> -->
-        </tbody>
-      </table>
     </div>
-
-    <script type="module" src="./asset/js/index.js"></script>
-    <script type="module" src="./asset/js/validation.js"></script>
+    <script type="module" src="./asset/js/utils.js"></script>
+    <script type="module" src="./asset/js/main.js"></script>
   </body>
 </html>
